@@ -878,6 +878,8 @@ proxy_ftp_handler(request_rec *r, struct cache_req *c, char *url)
     pclosef(pool, dsock);
     pclosef(pool, sock);
 
+    proxy_garbage_coll(r);
+
     return OK;
 }
 
